--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "blog-app",
+  "name":"inbox-health",
   "version": "1.0.0",
-  "description": "mvc for the win!",
+  "description": "to unsubscribe emails sender",
   "main": "server.js",
   "dependencies": {
-    "express": "^4.14.0",
-    "express-request-proxy": "^2.0.0"
+    "express-request-proxy": "^2.0.0",
+    "express": "^4.14.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "rick@codefellows.com",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bhavyaab/inbox-health.git"
+  },
+  "keywords": [
+    "gmail",
+    "inbox",
+    "cleaner"
+  ],
+  "author": "bhavyab@outlook.com",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/bhavyaab/inbox-health/issues"
+  },
+  "homepage": "https://github.com/bhavyaab/inbox-health#readme"
 }
