--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express-request-proxy": "^2.0.0",
     "express": "^4.14.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^3.8.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
